# nob

./: Cargo.toml  README.md  build.bat  build.sh  libnob  nob.code-workspace  run.bat  run.sh
libnob/: Cargo.toml
libnob/src/: app.rs  id.rs  kind.rs  lib.rs  obj.rs  result.rs  root.rs
src/: main.rs
