[package]
name = "nob"
version = "0.1.0"
authors = ["Jeremy Carter <jeremy@jeremycarter.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "libnob",
]

[dependencies]
libnob = { path = "./libnob", version = "0.1" }
